@@ -1,0 +1,257 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "KPOP\u5927\u7206\u70b8\uff01aespa\u3001NCT\u3001SF9\u6210\u54e1\u63a5\u9023\u767c\u8868\u65b0\u4f5c\uff0c\u54c8\u6210\u96f2\u6372\u5165\u6284\u8972\u98a8\u6ce2", "description": "KPOP\u5927\u7206\u70b8\uff01aespa\u3001NCT\u3001SF9\u6210\u54e1\u63a5\u9023\u767c\u8868\u65b0\u4f5c\uff0c\u54c8\u6210\u96f2\u6372\u5165\u6284\u8972\u98a8\u6ce2", "url": "https://www.famechos.me/news/KPOP\u5927\u7206\u70b8\uff01aespa\u3001NCT\u3001SF9\u6210\u54e1\u63a5\u9023\u767c\u8868\u65b0\u4f5c\uff0c\u54c8\u6210\u96f2\u6372\u5165\u6284\u8972\u98a8\u6ce2.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-11T20:45:39.007147+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/KPOP大爆炸！aespa、NCT、SF9成員接連發表新作，哈成雲捲入抄襲風波.html"/>
+<meta name="description" content="KPOP大爆炸！aespa、NCT、SF9成員新作接連發表，哈成雲捲入抄襲風波，娛樂圈熱議不斷！" />
+<meta name="keywords" content="KPOP,aespa,NCT,SF9,哈成雲,抄襲風波,新作發表" />
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/KPOP大爆炸！aespa、NCT、SF9成員接連發表新作，哈成雲捲入抄襲風波.html" />
+        <meta property="og:title" content="KPOP大爆炸！aespa、NCT、SF9成員接連發表新作，哈成雲捲入抄襲風波" />
+        <meta property="og:description" content="KPOP大爆炸！aespa、NCT、SF9成員接連發表新作，哈成雲捲入抄襲風波" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="KPOP大爆炸！aespa、NCT、SF9成員接連發表新作，哈成雲捲入抄襲風波" />
+        <meta property="twitter:description" content="KPOP大爆炸！aespa、NCT、SF9成員接連發表新作，哈成雲捲入抄襲風波" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>KPOP大爆炸！aespa、NCT、SF9成員接連發表新作，哈成雲捲入抄襲風波</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">11/10/2024</p>
+        </div>
+	<p>aespa即將推出的第五張迷你專輯預告內容已經上線，包括歌曲《Whiplash》的短片、專輯的六首曲目片段，以及一個專門的網站，讓粉絲可以混合和下載歌曲的部分片段。</p>
+<p>這張迷你專輯將於10月21日全面公開，是aespa正在進行的第二次國際巡演“同線同步”（Synk: Parallel Line）的一部分。該巡演已經擴展到北美、拉丁美洲和歐洲，共計29個城市舉辦41場演唱會，最後一場演唱會將於明年3月12日在西班牙馬德里舉行。</p>
+<h2>NCT成員本悠太推出個人音樂作品</h2>
+<p>NCT成員中本悠太於周四發表了他即將推出的個人專輯《Depth》的所有歌曲，這是他在日本的首張專輯。七首歌曲已經在各大音樂平台上線，包括主打歌《Off The Mask》的音樂視頻。</p>
+<p>實體專輯將於11月13日發行，他將成為NCT第六位發表個人專輯的成員。與此同時，這位偶像將於周六開始在日本舉辦個人巡演，題為“Hope”，共計九場演唱會，門票已經售罄。</p>
+<p>SF9成員유태양將於10月6日發表他的首張個人單曲。這首數位單曲名為《抱抱我》（Hug Me），視覺效果包括了歌曲的部分歌詞，鼓勵聽眾儘管面臨困難，也要勇往直前，追求自己的夢想。</p>
+<p>這位主舞者在6月份的個人粉絲演唱會上首次表演了這首自作曲，並將在10月4-5日的團體粉絲演唱會上為觀眾表演這首歌曲。</p>
+<p>另外，SF9最近發表了第14張迷你專輯《Fantasy》，這是三部曲的第一部分。然而，這張專輯只有五位成員參與，因為成員在恩和多元正在服兵役，主唱朱豪則有行程衝突。</p>
+<h2>哈成雲否認參與創作OST歌曲</h2>
+<p>哈成雲通過經紀公司Big Planet娛樂發表聲明，稱他只參與了戲劇原聲帶的錄製，與歌曲《What Are We》的抄襲爭議無關。</p>
+<h2>哈成雲的OST歌曲參與引發爭議</h2>
+<p>哈成雲表示，他以歌手身份參與了電影《隔壁的愛情》的OST歌曲錄製，但並沒有參與歌曲的創作或編曲。該歌曲於10月1日發行。</p>
+<p>歌手白藝潾在社交媒體上表達了疑慮，認為這首歌與她2019年發行的《0310》相似，稱之為她的歌曲的“翻版”。</p>
+<p>哈成雲將擔任選秀節目《Project 7》的聲樂導演，該節目將於10月18日播出。他曾是《Produce 101》的決賽選手之一。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/wz5ZlXyV9O4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演.html">KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
