@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Fri, 11 Oct 2024 20:43:01 +0800</lastBuildDate>
+  <lastBuildDate>Fri, 11 Oct 2024 20:45:51 +0800</lastBuildDate>
 
   <item>
   <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</title>
@@ -101,5 +101,14 @@ NCT Dream 將於11月29日至12月1日在首爾高尺天空巨蛋舉行三場演
 從輕鬆支付賬單到獲得最佳家具配送，你將準備好像當地人一樣生活在日本</description>
   <category>Others</category>
   <pubDate>Fri, 11 Oct 2024 20:43:01 +0800</pubDate>
+</item><item>
+  <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</title>
+  <link>https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演.html</link>
+  <description>aespa新專輯預告片上線
+aespa即將推出的第五張迷你專輯預告內容已經上線，包括歌曲《Whiplash》的短片、專輯的六首曲目片段，以及一個專門的網站，讓粉絲可以混合和下載歌曲的部分片段。
+這張迷你專輯將於10月21日全面公開，是aespa正在進行的第二次國際巡演“同線同步”（Synk: Parallel Line）的一部分。該巡演已經擴展到北美、拉丁美洲和歐洲，共計29個城市舉辦41場演唱會，最後一場演唱會將於明年3月12日在西班牙馬德里舉行。
+NCT成員中本悠太發表個人歌曲</description>
+  <category>K-Pop</category>
+  <pubDate>Fri, 11 Oct 2024 20:45:51 +0800</pubDate>
 </item></channel>
 </rss>
