@@ -11,3 +11,4 @@ https://www.koreaherald.com/view.php?ud=20241010050640
 https://tokyocheapo.com/editorial/halloween-2024-new-rules-shibuya-shinjuku/
 https://www.koreaherald.com/view.php?ud=20241007050599
 https://www.koreaherald.com/view.php?ud=20241008050607
+https://tokyocheapo.com/living/moving-to-japan-hacks/
